--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "axios": "^0.19.2",
     "lazysizes": "^5.2.0",
     "lodash": "^4.17.15",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
